Included option to prevent overwriting covers that already exist

--- a/main.css
+++ b/main.css
@@ -2196,7 +2196,6 @@
 		-moz-appearance: none;
 		-webkit-appearance: none;
 		-ms-appearance: none;
-		appearance: none;
 		display: block;
 		float: left;
 		margin-right: -2em;
